Changes
*******

0.4 (unreleased)
================

* Updated tests to run with `zc.buildout` 1.5, thus requiring at least this
  version.

* Using python's ``doctest`` module instead of depreacted
  ``zope.testing.doctest``.


0.3.1 (2009-08-21)
==================

* Update options ``path`` and ``paths`` to be referencable.

* Output ``created`` message only if a directory was really created
  but display this message also for intermediate directories.

0.3 (2009-08-20)
================

* Renamed ``path`` option to ``paths`` (plural). Please do not use
  ``path`` anymore!

* Created directories are now displayed during buildout runs.

* Changed default behaviour: directories created once will not be
  removed on updates, except you require that explicitly.

* Added new option ``remove-on-update``: if set to ``yes``, ``true``
  or ``on`` the set directories will be removed on updates of
  `buildout` configuration.


0.2 (2009-08-19)
================

* Make paths absolute and normalize them before creation.

* Support creation of several paths in a row.

* Added check whether a file exists as part of path and emit error.


0.1 (2009-08-17)
================

* Initial release.