@@ -1,0 +1,33 @@
+Regression Tests
+================
+
+  >>> write('buildout.cfg',
+  ... '''
+  ... [buildout]
+  ... parts = mydir
+  ... offline = true
+  ...
+  ... [mydir]
+  ... recipe = z3c.recipe.mkdir
+  ... path = my/nested/dir
+  ... ''')
+
+Using 'path' (deprecated but we promised to still support it) creates
+the given path and not the default (parts/mydir) (bug up to 0.3.1):
+
+Now we can run buildout:
+
+  >>> print system(join('bin', 'buildout')),
+  mydir: Use of 'path' option is deprectated. Use 'paths' instead.
+  Installing mydir.
+  mydir: created path: /sample-buildout/my
+  mydir: created path: /sample-buildout/my/nested
+  mydir: created path: /sample-buildout/my/nested/dir
+
+The directories were indeed created in the current directory:
+
+  >>> ls('my')
+  d  nested
+
+  >>> ls('my/nested')
+  d  dir
